@@ -30,7 +30,7 @@ License: GPL (>=3)
 Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de", role=c("aut", "cre")))
-Version: 0.3-33
+Version: 0.3-34
 Date: 2012-08-22
 Collate:
     'afex-package.R'
